2007-12-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py: reconfigure tarballs when -a specified,
	patch by Craig Keogh (closes: #502278)

2007-12-15  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* modulesets/gnome-suites-2.22.modules: gnome-python-desktop now
	depends on evolution-data-server; in addition, metacity dependency
	changed to suggestion.

2007-12-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules: branched file-roller for
	gnome-2-20.

2007-12-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.20.modules: branched ghex for gnome-2-20.

2007-12-13  William Jon McCann  <mccann@jhu.edu>

	* modulesets/gnome-2.22.modules: Add gnome-settings-daemon.

2007-12-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/tarball.py: don't apply patches on already
	unpacked and patched sources.

2007-12-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/__init__.py, jhbuild/commands/autobuild.py,
	jhbuild/commands/base.py, jhbuild/commands/bootstrap.py,
	jhbuild/commands/checkbranches.py, jhbuild/commands/gui.py,
	jhbuild/main.py: introspect commands to get their name and
	description for --help-commands, patch by John Stowers, slightly
	edited by myself.  (closes: #503491)

2007-12-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py, jhbuild/versioncontrol/__init__.py,
	jhbuild/versioncontrol/tarball.py: sync patch lookup features from
	tarball modtype to versioncontrol tarball; possibility to specify
	a full URL for patch files, or looking it up in moduleset directory
	or in a patches/ subdirectory of that one.

2007-12-12  William Jon McCann  <mccann@jhu.edu>

	* modulesets/gnome-suites-2.22.modules: Suggest libnotify for
	gnome-screensaver.

	* modulesets/gnome-suites-2.20.modules: use gnome-2-20 branch of
	gnome-screensaver and nautilus-cd-burner.

2007-12-12  Owen Taylor  <otaylor@redhat.com>

	* modulesets/online-desktop.modules: Add dbus-glib as a