@@ -1,5 +1,10 @@
 2007-12-15  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/modtypes/tarball.py: only unpack tarball if necessary, patch
+	by Craig Keogh.
+
+2007-12-15  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/modtypes/tarball.py: reconfigure tarballs when -a specified,
 	patch by Craig Keogh (closes: #502278)
 
